Fri Sep 12 15:13:31 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/examples/Notify/Lanes/Supplier.dsp:
        * orbsvcs/examples/Notify/ThreadPool/Supplier.dsp:

          Fixed release configuration settings.

Fri Sep 12 13:36:02 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/orbsvcs/RTKokyuEvent.dsp:
        * orbsvcs/examples/RtEC/Kokyu/EC_Schedule_Service.dsp:

          Fixed project settings.

Fri Sep 12 10:58:28 2003  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* orbsvcs/tests/Security/MT_IIOP_SSL/Makefile (SRVR_LIBS):

	  Explicitly link the ACE_SSL library to address an unresolved
	  symbol link-time error in Solaris Sun CC 5.3 builds.  The
	  server binary appears to needs the ACE_SSL_Context::instance()
	  method, at least according to the linker error.

Fri Sep 12 12:50:57 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/RTScheduling/Current/Current.dsp:
        * tests/RTScheduling/DT_Spawn/DT_Spawn.dsp:
        * tests/RTScheduling/Scheduling_Interceptor/Scheduler_Interceptor_Client.dsp:
        * tests/RTScheduling/Scheduling_Interceptor/Scheduler_Interceptor_Server.dsp:
        * tests/RTScheduling/Thread_Cancel/Thread_Cancel.dsp:
        * tests/RTScheduling/VoidData/VoidData.dsp:

          Fixed release settings, and changed debug settings to link to
          debug multi-threaded DLLs. Also added dependency on
          IDL compiler to all configurations.

Fri Sep 12 10:42:30 2003  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/Metrics/Metrics_LocalCache.h:

	  Moved typedefs within the preprocessor block that is enabled
	  when ACE_ENABLE_TIMEPROBES and ACE_COMPILE_TIMEPROBES are
	  defined.  Fixes compile-time errors on builds that do not enable
	  timeprobe support.

Fri Sep 12 10:29:13 MST 2003 Trevor Fields <fields_t@ociweb.com>

        * tests/Portable_Interceptors/Bug_1559/interceptors.cpp:

          Fixed compile error due to missing ACE_ENV_ARG_DECL.
