@@ -1,3 +1,12 @@
+Sun Sep 14 17:01:31 2003  George Edwards <g.edwards@vanderbilt.edu>
+
+        * tests/OBV/Supports/Supports_Test_impl.cpp:
+        * tests/OBV/Supports/Supports_Test_impl.h:
+        * tests/OBV/Supports/README:
+
+          Fixed compilation error due to incomplete mutex type declaration
+          in single-threaded builds. Updated documentation.
+
 Fri Sep 12 15:13:31 2003  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * orbsvcs/examples/Notify/Lanes/Supplier.dsp:
